[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/Entities/jam3storage.png" type="Texture" id=1]
[ext_resource path="res://entities/ItemObject.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/PotionTable.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 32.612

[node name="PotionTable" type="Sprite"]
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="DisplayItem" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 7.40147, -13.9077 )
scale = Vector2( 0.1, 0.1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 7.5812, 2.08111 )
shape = SubResource( 1 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
